# 2048

./: .gitignore  2048.py  2048kivy.py  2048pygame.py  2048stats.py  find_heuristics.py  game2048.py  grid2048.py  player.py  pyproject.toml  readme.md  requirments.txt
grid2048/: __init__.py  grid2048.py  hasher.py  helpers.py  helpers.pyx
players/: __init__.py  _mcts_player.py  cycle_player.py  expectimax_player.py  fmcts_player.py  mcs_player.py  mcts_player.py  minimax_player.py  player.py  random_player.py  user_player.py
tests/: test_AIpalyer.py  test_Grid2048.py  test_grid2048.py  test_helpers.py  test_players.py  tests_Grid2048.py
