[project]
name = "2048"
version = "0.1.0"
description = "Simple implementation of the 2048 game with AI players."
authors = [{ name = "Michał Pecyna", email = "michal.pecyna@gmail.com" }]
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.12"
dependencies = ["kivy>=2.3.0", "numpy>=2.1.3", "pygame>=2.6.1"]
